...
                        .fill(.blue)
                        .frame(width: 8, height: 8)
                }
            }

            HStack {
                Text("From:")
                    .foregroundStyle(.secondary)
                    .frame(width: 50, alignment: .leading)
                Text(message.fromDisplayString)
                    .textSelection(.enabled)
            }

...
                    Text(message.cc.map(\.displayString).joined(separator: ", "))
                        .textSelection(.enabled)
                }
            }

            HStack {
                Text("Date:")
                    .foregroundStyle(.secondary)
                    .frame(width: 50, alignment: .leading)
                Text(message.date, format: .dateTime.month().day().year().hour().minute())
            }

            if message.hasAttachments {
...
